deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kalshi-predictor-deployment
  labels:
    app: kalshi-predictor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kalshi-predictor
  template:
    metadata:
      labels:
        app: kalshi-predictor
    spec:
      containers:
        - name: kalshi-predictor
          image: maxcoppa/application:v0.0.12
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
